--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "babel-plugin-nameof-js": "0.0.2",
     "babel-plugin-react-intl": "5.1.18",
     "babel-preset-react-optimize": "1.0.1",
+    "bcryptjs": "2.4.3",
     "blake2b": "2.1.3",
     "cardano-wallet": "1.2.2",
     "chai": "4.3.0",
