--- a/package.json
+++ b/package.json
@@ -110,10 +110,12 @@
     "cucumber": "git+https://github.com/SebastienGllmt/cucumber-js.git",
     "eslint": "7.12.1",
     "eslint-config-airbnb": "18.2.0",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-flowtype": "5.2.0",
     "eslint-plugin-import": "2.22.0",
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-no-floating-promise": "git+https://github.com/SebastienGllmt/eslint-plugin-no-floating-promise.git",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "7.21.5",
     "file-loader": "6.1.0",
@@ -133,6 +135,7 @@
     "node-sass": "4.14.1",
     "path-to-regexp": "6.2.0",
     "postcss-loader": "3.0.0",
+    "prettier": "^2.1.2",
     "raw-loader": "4.0.1",
     "react-intl-translations-manager": "5.0.3",
     "rimraf": "3.0.2",
