--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,8 @@
 {
-  "trailingComma": "es6",
+  "trailingComma": "es5",
   "tabWidth": 2,
   "semi": true,
   "singleQuote": true,
   "printWidth": 100,
-  "arrowParens": "off"
+  "arrowParens": "avoid"
 }
