--- a/package.json
+++ b/package.json
@@ -98,7 +98,6 @@
     "babel-plugin-react-intl": "5.1.18",
     "babel-preset-react-optimize": "1.0.1",
     "blake2b": "2.1.3",
-    "bn.js": "4.11.8",
     "cardano-wallet": "1.2.2",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
@@ -108,6 +107,7 @@
     "crx": "5.0.1",
     "css-loader": "4.3.0",
     "cucumber": "git+https://github.com/SebastienGllmt/cucumber-js.git",
+    "ergo-lib-wasm-nodejs": "0.4.1",
     "eslint": "7.12.1",
     "eslint-config-airbnb": "18.2.0",
     "eslint-config-prettier": "6.15.0",
@@ -153,7 +153,6 @@
   },
   "dependencies": {
     "@cardano-foundation/ledgerjs-hw-app-cardano": "2.0.1",
-    "@coinbarn/ergo-ts": "git+https://github.com/Emurgo/ergo-ts-temp.git",
     "@download/blockies": "1.0.3",
     "@emurgo/cardano-serialization-lib-browser": "4.2.0",
     "@emurgo/cip4-js": "1.0.5",
@@ -171,6 +170,7 @@
     "classnames": "2.2.6",
     "crypto-random-string": "3.3.0",
     "dropbox": "4.0.30",
+    "ergo-lib-wasm-browser": "0.4.1",
     "es6-error": "4.1.1",
     "file-saver": "1.3.8",
     "jdenticon": "3.0.1",
