Switch tx sign UI to custom popup page
Notifications as mentioned before are an awful UX so we'll try a normal
webpage.

--- a/yoroi-ergo-connector/manifest.json
+++ b/yoroi-ergo-connector/manifest.json
@@ -26,11 +26,12 @@
   },
   "permissions": [
     "activeTab",
-    "notifications",
     "storage"
   ],
   "web_accessible_resources": [
     "main.html",
-    "main.js"
+    "main.js",
+    "sign.html",
+    "sign.js"
   ]
 }
