--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@babel/runtime-corejs3": "7.11.2",
     "@emurgo/cardano-serialization-lib-nodejs": "4.2.0",
     "@emurgo/js-chain-libs-node": "0.7.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@storybook/addon-actions": "5.3.19",
     "@storybook/addon-knobs": "5.3.19",
     "@storybook/addon-links": "5.3.19",
@@ -138,6 +139,7 @@
     "prettier": "2.2.1",
     "raw-loader": "4.0.1",
     "react-intl-translations-manager": "5.0.3",
+    "react-refresh": "^0.9.0",
     "rimraf": "3.0.2",
     "sass-loader": "10.0.1",
     "selenium-webdriver": "4.0.0-alpha.7",
@@ -191,7 +193,6 @@
     "react-blockies": "1.4.1",
     "react-copy-to-clipboard": "5.0.2",
     "react-dom": "16.13.1",
-    "react-hot-loader": "4.13.0",
     "react-intl": "2.9.0",
     "react-markdown": "5.0.3",
     "react-polymorph": "git+https://github.com/rcmorano/react-polymorph-fix.git",
