Connector: Implement whitelist/redo connect screen/config
The whitelist now lives within Yoroi instead of the connector.

The whitelist has been merged with being connected, so you must
whitelist a site to be connected, simplifying the UX. The site remains
"connected" until removed from the whitelist.

The config menu opened by clicking the connector browser icon now lives
within Yoroi instead of the connector. It has also been changed from a
page action to a browser action since that makes more sense to have it
always available.

--- a/yoroi-ergo-connector/manifest.json
+++ b/yoroi-ergo-connector/manifest.json
@@ -21,17 +21,11 @@
     }
   ],
   "manifest_version": 2,
-  "page_action": {
+  "browser_action": {
     "default_title": "Yoroi-Ergo dApp Connector"
   },
   "permissions": [
     "activeTab",
     "storage"
-  ],
-  "web_accessible_resources": [
-    "main.html",
-    "main.js",
-    "sign.html",
-    "sign.js"
   ]
 }
