--- a/package.json
+++ b/package.json
@@ -195,7 +195,7 @@
     "react-dom": "16.13.1",
     "react-intl": "2.9.0",
     "react-markdown": "5.0.3",
-    "react-polymorph": "git+https://github.com/rcmorano/react-polymorph-fix.git",
+    "react-polymorph": "0.9.8-rc.3",
     "react-resize-detector": "5.2.0",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
