--- a/package.json
+++ b/package.json
@@ -106,7 +106,7 @@
     "config": "1.31.0",
     "config-webpack": "1.0.4",
     "crx": "5.0.1",
-    "css-loader": "4.3.0",
+    "css-loader": "5.0.2",
     "cucumber": "git+https://github.com/SebastienGllmt/cucumber-js.git",
     "ergo-lib-wasm-nodejs": "0.4.4",
     "eslint": "7.20.0",
@@ -119,13 +119,13 @@
     "eslint-plugin-prettier": "3.3.1",
     "eslint-plugin-promise": "4.3.1",
     "eslint-plugin-react": "7.22.0",
-    "file-loader": "6.1.0",
+    "file-loader": "6.2.0",
     "flow-bin": "0.142.0",
     "flow-typed": "3.3.1",
     "geckodriver": "1.22.1",
-    "html-loader": "1.3.2",
-    "html-webpack-harddisk-plugin": "1.0.2",
-    "html-webpack-plugin": "4.5.0",
+    "html-loader": "2.0.0",
+    "html-webpack-harddisk-plugin": "2.0.0",
+    "html-webpack-plugin": "5.1.0",
     "husky": "4.3.0",
     "jest": "26.6.3",
     "jest-canvas-mock": "2.3.1",
@@ -135,20 +135,22 @@
     "minimist": "1.2.5",
     "node-sass": "4.14.1",
     "path-to-regexp": "6.2.0",
-    "postcss-loader": "3.0.0",
+    "postcss": "8.2.6",
+    "postcss-loader": "5.0.0",
     "prettier": "2.2.1",
     "raw-loader": "4.0.2",
     "react-intl-translations-manager": "5.0.3",
-    "react-refresh": "^0.9.0",
+    "react-refresh": "0.9.0",
     "rimraf": "3.0.2",
-    "sass-loader": "10.0.1",
+    "sass-loader": "11.0.1",
     "selenium-webdriver": "4.0.0-alpha.7",
     "shelljs": "0.8.4",
     "storycap": "2.3.5",
     "style-loader": "1.2.1",
     "url-loader": "4.1.1",
-    "webpack": "4.44.2",
-    "webpack-cli": "3.3.12",
+    "webpack": "5.22.0",
+    "webpack-cli": "4.5.0",
+    "webpack-dev-middleware": "4.1.0",
     "webpack-hot-middleware": "2.25.0",
     "webpack-httpolyglot-server": "0.3.0",
     "ws": "7.4.2"
@@ -166,17 +168,20 @@
     "bignumber.js": "9.0.1",
     "bip32": "2.0.6",
     "bip39": "3.0.3",
+    "browserify-zlib": "0.2.0",
     "bs58": "4.0.1",
     "bs58check": "2.1.2",
+    "buffer": "^6.0.3",
     "cardano-wallet-browser": "1.2.2",
     "chacha": "2.1.0",
     "classnames": "2.2.6",
+    "crypto-browserify": "3.12.0",
     "crypto-random-string": "3.3.1",
     "dropbox": "4.0.30",
     "ergo-lib-wasm-browser": "0.4.4",
     "es6-error": "4.1.1",
     "file-saver": "1.3.8",
-    "jdenticon": "3.0.1",
+    "jdenticon": "3.1.0",
     "jspdf": "1.5.3",
     "lodash": "4.17.20",
     "lovefield": "2.1.12",
@@ -186,7 +191,9 @@
     "mobx-react-form": "2.0.8",
     "mobx-react-router": "4.1.0",
     "moment": "2.29.1",
+    "path-browserify": "1.0.1",
     "pbkdf2": "3.1.1",
+    "process": "0.11.10",
     "qr-image": "3.2.0",
     "qrcode.react": "1.0.1",
     "react": "16.13.1",
@@ -203,6 +210,7 @@
     "ringbufferjs": "2.0.0",
     "route-parser": "0.0.5",
     "semver": "7.3.4",
+    "stream-browserify": "3.0.0",
     "tinycolor2": "1.4.2",
     "trezor-connect": "8.1.22",
     "ua-parser-js": "0.7.24",
