switch httpolyglot to our own version

--- a/package.json
+++ b/package.json
@@ -152,7 +152,7 @@
     "webpack-cli": "4.5.0",
     "webpack-dev-middleware": "4.1.0",
     "webpack-hot-middleware": "2.25.0",
-    "webpack-httpolyglot-server": "0.3.0",
+    "webpack-httpolyglot-server": "git+https://github.com/Emurgo/webpack-httpolyglot-server.git",
     "ws": "7.4.2"
   },
   "dependencies": {
