--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "@storybook/addon-postcss": "2.0.0",
     "@storybook/addon-viewport": "6.2.0-alpha.33",
     "@storybook/addons": "6.2.0-alpha.33",
-    "@storybook/builder-webpack5": "^6.2.0-alpha.33",
+    "@storybook/builder-webpack5": "6.2.0-alpha.33",
     "@storybook/react": "6.2.0-alpha.33",
     "@storybook/source-loader": "6.2.0-alpha.33",
     "autoprefixer": "10.2.4",
@@ -160,19 +160,20 @@
     "@cardano-foundation/ledgerjs-hw-app-cardano": "2.2.1",
     "@download/blockies": "1.0.3",
     "@emurgo/cardano-serialization-lib-browser": "6.0.0",
+    "@emurgo/cip14-js": "2.0.0",
     "@emurgo/cip4-js": "1.0.5",
     "@emurgo/js-chain-libs": "0.7.1",
     "@emurgo/ledger-connect-handler": "3.1.2",
     "@svgr/webpack": "5.5.0",
     "axios": "0.21.1",
-    "bech32": "1.1.4",
+    "bech32": "2.0.0",
     "bignumber.js": "9.0.1",
     "bip32": "2.0.6",
     "bip39": "3.0.3",
     "browserify-zlib": "0.2.0",
     "bs58": "4.0.1",
     "bs58check": "2.1.2",
-    "buffer": "^6.0.3",
+    "buffer": "6.0.3",
     "cardano-wallet-browser": "1.2.2",
     "chacha": "2.1.0",
     "classnames": "2.2.6",
