--- a/packages/yoroi-extension/package.json
+++ b/packages/yoroi-extension/package.json
@@ -8,7 +8,7 @@
     "dev:nightly": "npm run dev:build -- --env 'mainnet' --nightly",
     "dev:mock-backend": "babel-node scripts/startWithMockServer.js",
     "prod:build": "rimraf build/ && NODE_ENV=production babel-node scripts/build --type=prod",
-    "prod:compress": "babel-node scripts/compress",
+    "prod:compress": "babel-node ../../scripts/compress",
     "prod:unsigned": "npm run prod:build -- --env ${CARDANO_NETWORK:-testnet} && npm run prod:compress -- --env ${CARDANO_NETWORK:-testnet} --app-id yoroi-${CARDANO_NETWORK:-testnet} --zip-only --codebase https://yoroiwallet.com/dw/yoroi-${CARDANO_NETWORK:-testnet}-extension.crx",
     "prod:nightly": "npm run prod:build -- --env 'mainnet' --nightly && npm run -s prod:compress -- --env 'mainnet' --app-id 'yoroi-nightly' --zip-only --codebase 'https://yoroiwallet.com/dw/yoroi-nightly-extension.crx' --key \"'${YOROI_NIGHTLY_PEM:-./nightly-key.pem}'\"",
     "prod:stable": "npm run prod:build -- --env 'mainnet' && npm run prod:compress -- --env 'mainnet' --app-id 'yoroi' --zip-only --codebase 'https://yoroiwallet.com/dw/yoroi-extension.crx' --key ./production-key.pem",
