fix path in translations scripts

--- a/packages/yoroi-extension/package.json
+++ b/packages/yoroi-extension/package.json
@@ -33,8 +33,8 @@
     "localci:setup": "sudo /bin/bash ./features/localCI/setup.sh",
     "localci:newbuild": "sudo /bin/bash ./features/localCI/new_build.sh",
     "localci:test": "sudo /bin/bash ./features/localCI/wrap_command.sh",
-    "translations:manage": "node ../translations/translation-runner.js",
-    "translations:purge": "rimraf ../translations/messages",
+    "translations:manage": "node ./translations/translation-runner.js",
+    "translations:purge": "rimraf ./translations/messages",
     "storybook:watch": "NODE_ENV=storybook start-storybook -p 6006",
     "storybook:build": "NODE_ENV=storybook build-storybook",
     "storybook:screenshots": "rimraf ./__screenshots__/ && storycap http://localhost:6006",
