--- a/packages/yoroi-extension/package.json
+++ b/packages/yoroi-extension/package.json
@@ -158,6 +158,7 @@
     "@emurgo/js-chain-libs": "0.7.1",
     "@emurgo/ledger-connect-handler": "3.1.2",
     "@svgr/webpack": "5.5.0",
+    "async-mutex": "^0.3.1",
     "axios": "0.21.1",
     "bech32": "2.0.0",
     "bignumber.js": "9.0.1",
