--- a/packages/yoroi-extension/package.json
+++ b/packages/yoroi-extension/package.json
@@ -74,15 +74,15 @@
     "@emurgo/cardano-serialization-lib-nodejs": "6.0.0",
     "@emurgo/js-chain-libs-node": "0.7.1",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
-    "@storybook/addon-actions": "6.2.0-alpha.33",
-    "@storybook/addon-knobs": "6.2.0-alpha.33",
-    "@storybook/addon-links": "6.2.0-alpha.33",
+    "@storybook/addon-actions": "6.2.7",
+    "@storybook/addon-knobs": "6.2.7",
+    "@storybook/addon-links": "6.2.7",
     "@storybook/addon-postcss": "2.0.0",
-    "@storybook/addon-viewport": "6.2.0-alpha.33",
-    "@storybook/addons": "6.2.0-alpha.33",
-    "@storybook/builder-webpack5": "6.2.0-alpha.33",
-    "@storybook/react": "6.2.0-alpha.33",
-    "@storybook/source-loader": "6.2.0-alpha.33",
+    "@storybook/addon-viewport": "6.2.7",
+    "@storybook/addons": "6.2.7",
+    "@storybook/builder-webpack5": "6.2.7",
+    "@storybook/react": "6.2.7",
+    "@storybook/source-loader": "6.2.7",
     "autoprefixer": "10.2.4",
     "babel-eslint": "11.0.0-beta.2",
     "babel-jest": "26.6.3",
