--- a/packages/yoroi-extension/package.json
+++ b/packages/yoroi-extension/package.json
@@ -149,13 +149,13 @@
     "ws": "7.4.3"
   },
   "dependencies": {
-    "@cardano-foundation/ledgerjs-hw-app-cardano": "2.2.1",
+    "@cardano-foundation/ledgerjs-hw-app-cardano": "git+https://github.com/SebastienGllmt/ledgerjs-hw-app-cardano.git",
     "@download/blockies": "1.0.3",
     "@emurgo/cardano-serialization-lib-browser": "6.0.0",
     "@emurgo/cip14-js": "2.0.0",
     "@emurgo/cip4-js": "1.0.5",
     "@emurgo/js-chain-libs": "0.7.1",
-    "@emurgo/ledger-connect-handler": "3.1.2",
+    "@emurgo/ledger-connect-handler": "4.4.0",
     "@svgr/webpack": "5.5.0",
     "async-mutex": "^0.3.1",
     "axios": "0.21.1",
