--- a/packages/yoroi-extension/package.json
+++ b/packages/yoroi-extension/package.json
@@ -181,6 +181,7 @@
     "ergo-lib-wasm-browser": "0.13.3",
     "es6-error": "4.1.1",
     "file-saver": "2.0.5",
+    "json-bigint": "1.0.0",
     "jdenticon": "3.1.0",
     "jspdf": "1.5.3",
     "lodash": "4.17.20",
