--- a/packages/yoroi-extension/package.json
+++ b/packages/yoroi-extension/package.json
@@ -182,6 +182,7 @@
     "es6-error": "4.1.1",
     "file-saver": "2.0.5",
     "jdenticon": "3.1.0",
+    "json-bigint": "1.0.0",
     "jspdf": "1.5.3",
     "lodash": "4.17.20",
     "lovefield": "2.1.12",
