install react-beautiful-dnd

--- a/packages/yoroi-extension/package.json
+++ b/packages/yoroi-extension/package.json
@@ -198,6 +198,7 @@
     "qr-image": "3.2.0",
     "qrcode.react": "1.0.1",
     "react": "16.13.1",
+    "react-beautiful-dnd": "^13.1.0",
     "react-blockies": "1.4.1",
     "react-copy-to-clipboard": "5.0.3",
     "react-dom": "16.13.1",
