--- a/packages/yoroi-extension/.flowconfig
+++ b/packages/yoroi-extension/.flowconfig
@@ -36,3 +36,4 @@ module.name_mapper.extension='png' -> '<PROJECT_ROOT>/flow/mappers/WebpackAsset.
 module.name_mapper.extension='jpg' -> '<PROJECT_ROOT>/flow/mappers/WebpackAsset.js.flow'
 module.name_mapper.extension='svg' -> '<PROJECT_ROOT>/flow/mappers/WebpackAsset.js.flow'
 module.name_mapper.extension='md' -> '<PROJECT_ROOT>/flow/mappers/Markdown.js.flow'
+react.runtime=automatic
