--- a/packages/yoroi-extension/package.json
+++ b/packages/yoroi-extension/package.json
@@ -155,11 +155,14 @@
   "dependencies": {
     "@cardano-foundation/ledgerjs-hw-app-cardano": "3.1.0",
     "@download/blockies": "1.0.3",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@emurgo/cardano-serialization-lib-browser": "8.0.0",
     "@emurgo/cip14-js": "2.0.0",
     "@emurgo/cip4-js": "1.0.5",
     "@emurgo/js-chain-libs": "0.7.1",
     "@emurgo/ledger-connect-handler": "5.0.0",
+    "@mui/material": "^5.0.0-rc.0",
     "@svgr/webpack": "5.5.0",
     "async-mutex": "^0.3.1",
     "axios": "0.21.1",
