--- a/packages/yoroi-extension/package.json
+++ b/packages/yoroi-extension/package.json
@@ -162,6 +162,7 @@
     "@emurgo/cip4-js": "1.0.5",
     "@emurgo/js-chain-libs": "0.7.1",
     "@emurgo/ledger-connect-handler": "5.0.0",
+    "@mui/lab": "^5.0.0-alpha.45",
     "@mui/material": "^5.0.0-rc.0",
     "@svgr/webpack": "5.5.0",
     "async-mutex": "^0.3.1",
