--- a/packages/yoroi-extension/package.json
+++ b/packages/yoroi-extension/package.json
@@ -181,6 +181,7 @@
     "classnames": "2.2.6",
     "crypto-browserify": "3.12.0",
     "crypto-random-string": "3.3.1",
+    "downshift": "^6.1.7",
     "dropbox": "4.0.30",
     "ergo-lib-wasm-browser": "0.14.0-alpha-01cd628",
     "es6-error": "4.1.1",
