--- a/packages/yoroi-extension/package.json
+++ b/packages/yoroi-extension/package.json
@@ -75,7 +75,7 @@
     "@babel/register": "7.12.13",
     "@babel/runtime": "7.12.18",
     "@babel/runtime-corejs3": "7.12.18",
-    "@emurgo/cardano-serialization-lib-nodejs": "8.1.0",
+    "@emurgo/cardano-serialization-lib-nodejs": "9.0.0-beta.1",
     "@emurgo/js-chain-libs-node": "0.7.1",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@storybook/addon-actions": "6.2.7",
@@ -155,7 +155,7 @@
   "dependencies": {
     "@cardano-foundation/ledgerjs-hw-app-cardano": "3.1.0",
     "@download/blockies": "1.0.3",
-    "@emurgo/cardano-serialization-lib-browser": "8.1.0",
+    "@emurgo/cardano-serialization-lib-browser": "9.0.0-beta.1",
     "@emurgo/cip14-js": "2.0.0",
     "@emurgo/cip4-js": "1.0.5",
     "@emurgo/js-chain-libs": "0.7.1",
