--- a/packages/yoroi-ergo-connector/example-cardano/package.json
+++ b/packages/yoroi-ergo-connector/example-cardano/package.json
@@ -11,10 +11,13 @@
     "start": "webpack-dev-server"
   },
   "devDependencies": {
-    "ergo-lib-wasm-browser": "0.14.0-alpha-01cd628",
+    "@emurgo/cardano-serialization-lib-browser": "6.0.0",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
     "copy-webpack-plugin": "^5.0.0"
+  },
+  "dependencies": {
+    "bignumber.js": "^9.0.1"
   }
 }
