--- a/packages/yoroi-ergo-connector/example-ergo/package.json
+++ b/packages/yoroi-ergo-connector/example-ergo/package.json
@@ -11,7 +11,8 @@
     "start": "webpack-dev-server"
   },
   "devDependencies": {
-    "ergo-lib-wasm-browser": "0.13.3",
+    "ergo-lib-wasm-browser": "0.14.0-alpha-a3940fc",
+    "json-bigint": "^1.0.0",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
