--- a/packages/yoroi-extension/package.json
+++ b/packages/yoroi-extension/package.json
@@ -162,8 +162,8 @@
     "@emurgo/cip4-js": "1.0.5",
     "@emurgo/js-chain-libs": "0.7.1",
     "@emurgo/ledger-connect-handler": "5.0.0",
-    "@mui/lab": "5.0.0-alpha.49",
-    "@mui/material": "5.0.2",
+    "@mui/lab": "^5.0.0-alpha.51",
+    "@mui/material": "^5.0.4",
     "@svgr/webpack": "5.5.0",
     "async-mutex": "^0.3.1",
     "axios": "0.21.1",
