--- a/packages/yoroi-extension/package.json
+++ b/packages/yoroi-extension/package.json
@@ -162,6 +162,8 @@
     "@emurgo/cip4-js": "1.0.5",
     "@emurgo/js-chain-libs": "0.7.1",
     "@emurgo/ledger-connect-handler": "6.0.0",
+    "@emurgo/yoroi-lib-browser": "file:../../../yoroi-lib/packages/yoroi-lib-browser/emurgo-yoroi-lib-browser-0.0.1-alpha.0.tgz",
+    "@emurgo/yoroi-lib-core": "file:../../../yoroi-lib/packages/yoroi-lib-core/emurgo-yoroi-lib-core-0.0.1-alpha.0.tgz",
     "@mui/lab": "^5.0.0-alpha.51",
     "@mui/material": "^5.0.4",
     "@svgr/webpack": "5.5.0",
