--- a/packages/yoroi-ergo-connector/example-cardano/package.json
+++ b/packages/yoroi-ergo-connector/example-cardano/package.json
@@ -18,6 +18,8 @@
     "copy-webpack-plugin": "^5.0.0"
   },
   "dependencies": {
+    "@emurgo/cip4-js": "1.0.6",
+    "@download/blockies": "1.0.3",
     "bignumber.js": "^9.0.1"
   }
 }
