--- a/packages/yoroi-extension/package.json
+++ b/packages/yoroi-extension/package.json
@@ -10,10 +10,14 @@
     "dev:nightly-win": "npm run dev:build -- --env=mainnet --nightly",
     "dev:mock-backend": "babel-node scripts/startWithMockServer.js",
     "prod:build": "rimraf build/ && NODE_ENV=production babel-node scripts/build --type=prod",
+    "prod:build:light": "rimraf build/ && NODE_ENV=production babel-node scripts/build --type=prod --dontInjectConnector",
     "prod:compress": "babel-node ../../scripts/compress",
     "prod:unsigned": "npm run prod:build -- --env ${CARDANO_NETWORK:-testnet} && npm run prod:compress -- --env ${CARDANO_NETWORK:-testnet} --app-id yoroi-${CARDANO_NETWORK:-testnet} --zip-only --codebase https://yoroiwallet.com/dw/yoroi-${CARDANO_NETWORK:-testnet}-extension.crx",
+    "prod:unsigned:light": "npm run prod:build:light -- --env ${CARDANO_NETWORK:-testnet} && npm run prod:compress -- --env ${CARDANO_NETWORK:-testnet} --app-id yoroi-${CARDANO_NETWORK:-testnet} --zip-only --codebase https://yoroiwallet.com/dw/yoroi-${CARDANO_NETWORK:-testnet}-extension.crx",
     "prod:nightly": "npm run prod:build -- --env 'mainnet' --nightly --ergoConnectorExtensionId=chifollcalpmjdiokipacefnpmbgjnle && npm run -s prod:compress -- --env 'mainnet' --app-id 'yoroi-nightly' --zip-only --codebase 'https://yoroiwallet.com/dw/yoroi-nightly-extension.crx' --key \"'${YOROI_NIGHTLY_PEM:-./nightly-key.pem}'\"",
+    "prod:nightly:light": "npm run prod:build:light -- --env 'mainnet' --nightly --ergoConnectorExtensionId=chifollcalpmjdiokipacefnpmbgjnle && npm run -s prod:compress -- --env 'mainnet' --app-id 'yoroi-nightly' --zip-only --codebase 'https://yoroiwallet.com/dw/yoroi-nightly-extension.crx' --key \"'${YOROI_NIGHTLY_PEM:-./nightly-key.pem}'\"",
     "prod:stable": "npm run prod:build -- --env 'mainnet' && npm run prod:compress -- --env 'mainnet' --app-id 'yoroi' --zip-only --codebase 'https://yoroiwallet.com/dw/yoroi-extension.crx' --key ./production-key.pem",
+    "prod:stable:light": "npm run prod:build:light -- --env 'mainnet' && npm run prod:compress -- --env 'mainnet' --app-id 'yoroi' --zip-only --codebase 'https://yoroiwallet.com/dw/yoroi-extension.crx' --key ./production-key.pem",
     "prod:nightly-win": "npm run prod:build -- --env=mainnet --nightly --ergoConnectorExtensionId=chifollcalpmjdiokipacefnpmbgjnle && npm run -s prod:compress -- --env=mainnet --app-id=yoroi-nightly --zip-only --codebase=https://yoroiwallet.com/dw/yoroi-nightly-extension.crx --key=\"${YOROI_NIGHTLY_PEM:-./nightly-key.pem}\"",
     "prod:stable-win": "npm run prod:build -- --env=mainnet && npm run prod:compress -- --env=mainnet --app-id=yoroi --zip-only --codebase=https://yoroiwallet.com/dw/yoroi-extension.crx --key=./production-key.pem",
     "keygen": "crx keygen",
