--- a/packages/yoroi-extension/package.json
+++ b/packages/yoroi-extension/package.json
@@ -81,7 +81,7 @@
     "@babel/register": "7.12.13",
     "@babel/runtime": "7.12.18",
     "@babel/runtime-corejs3": "7.12.18",
-    "@emurgo/cardano-serialization-lib-nodejs": "10.0.0-beta.9",
+    "@emurgo/cardano-serialization-lib-nodejs": "10.0.0",
     "@emurgo/js-chain-libs-node": "0.7.1",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@storybook/addon-actions": "6.2.7",
@@ -164,7 +164,7 @@
     "@download/blockies": "1.0.3",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "@emurgo/cardano-serialization-lib-browser": "10.0.0-beta.9",
+    "@emurgo/cardano-serialization-lib-browser": "10.0.0",
     "@emurgo/cip14-js": "2.0.0",
     "@emurgo/cip4-js": "1.0.5",
     "@emurgo/js-chain-libs": "0.7.1",
