--- a/packages/yoroi-extension/package.json
+++ b/packages/yoroi-extension/package.json
@@ -9,6 +9,7 @@
     "dev:stable-win": "npm run dev:build -- --env=mainnet",
     "dev:nightly-win": "npm run dev:build -- --env=mainnet --nightly",
     "dev:mock-backend": "babel-node scripts/startWithMockServer.js",
+    "create-report": "node reportGenerator.js",
     "prod:build": "rimraf build/ && NODE_ENV=production babel-node scripts/build --type=prod",
     "prod:build:light": "rimraf build/ && NODE_ENV=production babel-node scripts/build --type=prod --dontInjectConnector",
     "prod:build-win": "rimraf build/ && SET NODE_ENV=production && babel-node scripts/build --type=prod",
